Sistema de Adição... Tem que fazer o CRUD inteiro ainda.

--- a/Pages/job.html
+++ b/Pages/job.html
@@ -11,8 +11,7 @@
     <div id="container">
         <header id="cabecalho">
             <li class="parte_cima"><a href="/Pages/first.html" class="sites">Inicio</a></li>
-            <li class="parte_cima"><a href="#" class="sites">Menu</a></li>
-            <li class="parte_cima"><a href="#" class="sites">Reserve</a></li>
+            <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
             <li class="parte_cima"><a href="/Pages/job.html" class="sites">Trabalhe conosco</a></li>
         </header>
         <main>
@@ -38,7 +37,6 @@
                     <input type="number" id="intN" name="intN" placeholder="Nº" required><br><br>
                     <label for="subarquive">Envie nos seu currículo: </label>
                     <input type="file" id="subarquive" name="subarquive"><br><br>
-                    <label for="buttonsubmit"></label>
                     <span title="Enviar formulário."><input type="submit" id="buttonsubmit" name="buttonsubmit"></span>
                 </form>
             </section>
