--- a/Pages/first.html
+++ b/Pages/first.html
@@ -12,8 +12,7 @@
         <header id="cabecalho">
             <ul>
                 <li class="parte_cima"><a href="/Pages/first.html" class="sites">Inicio</a></li>
-                <li class="parte_cima"><a href="#" class="sites">Menu</a></li>
-                <li class="parte_cima"><a href="#" class="sites">Reserve</a></li>
+                <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
                 <li class="parte_cima"><a href="/Pages/job.html" class="sites">Trabalhe conosco</a></li>
             </ul>
         </header>
