Atualização sistema EDIT.

--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -33,6 +33,19 @@
                         <button id="resetButton">Resetar</button>
                     </form>
                 </div>
+                <!--<div id="menu-start">
+                    <div id="menu-edit">
+                        <label for="editproductName">Nome do Produto: </label>
+                        <input type="text" id="editproductName" name="ediproductName" placeholder="Nome do produto"><br>
+                        <p id="">Antes era:</p><br>
+                        <label for="editimgCard">A imagem do alimento:</label>
+                        <input type="file" id="editimgCard" name="editimgCard" accept="image/*"><br><br>
+                        <label for="edittxtDesc">Descrição: </label><br>
+                        <textarea id="edittxtDesc" name="edittxtDesc" placeholder="Descrição" rows="5" cols="30"></textarea><br><br>
+                        <label for="editintPreco">Preço do produto: </label>
+                        <input type="number" name="editintPreco" id="editintPreco" placeholder="Preço do produto">
+                    </div>
+                </div>-->
                 <table>
                     <thead>
                         <tr>
