Conclusão do sistema CRUD

--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -30,10 +30,9 @@
                         <label for="intPreco">Preço do produto: </label>
                         <input type="number" name="intPreco" id="intPreco" placeholder="Preço do produto">
                         <button id="svButton">Salvar</button>
-                        <button id="resetButton">Resetar</button>
                     </form>
                 </div>
-                <!--<div id="menu-start">
+                <div id="menu-start">
                     <div id="menu-edit">
                         <label for="editproductName">Nome do Produto: </label>
                         <input type="text" id="editproductName" name="ediproductName" placeholder="Nome do produto"><br>
@@ -44,8 +43,9 @@
                         <textarea id="edittxtDesc" name="edittxtDesc" placeholder="Descrição" rows="5" cols="30"></textarea><br><br>
                         <label for="editintPreco">Preço do produto: </label>
                         <input type="number" name="editintPreco" id="editintPreco" placeholder="Preço do produto">
+                        <button id="svButton">Salvar</button>
                     </div>
-                </div>-->
+                </div>
                 <table>
                     <thead>
                         <tr>
@@ -71,7 +71,6 @@
             </address>
         </footer>
     </div>
-    <script src="/Backend/script.js"></script>
     <script src="/Backend/crud.js"></script>
 </body>
 </html>
