Vai virar um repositório falando sobre mim.

--- a/Pages/first.html
+++ b/Pages/first.html
@@ -19,9 +19,9 @@
         <main>
             <section id="introducao">
                 <article>
-                    <h2>Welcome to Kiess's Coffee</h2>
+                    <h2>Bem vindo ao meu repositório!!</h2>
                     <img id="coffeshop" src="/Images/Coffeshop.png" alt="Imagem agradável de um local que vende café!"/>
-                    <p>Aqui fazemos o seu dia mais alegre! </p>
+                    <p >Aqui eu venho mostrar um pouco sobre minhas pequenas "softskills" e como costumo atribuir elas, estou em fase de aprendizado, mas aos poucos vamos seguindo. </p>
                 </article>
             </section>
         </main>
