--- a/Pages/API.html
+++ b/Pages/API.html
@@ -12,11 +12,11 @@
         <header id="cabecalho">
             <li class="parte_cima"><a href="/Pages/first.html" class="sites">Inicio</a></li>
             <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
-            <li class="parte_cima"><a href="/Pages/job.html" class="sites">Trabalhe conosco</a></li>
+            <li class="parte_cima"><a href="/Pages/API.html" class="sites">Uso de APIrest</a></li>
         </header>
         <main>
             <section id="introducao">
-                <h2>Deseja trabalhar conosco?<br>Envie seu curriculo!!</h2>
+                <h2>Sistema utilizado com APIrest pública</h2>
                 <form action="" method="GET" id="curriculo">
                     <label for="name">Nome Completo: </label>
                     <input type="text" id="name" name="name" placeholder="Seu nome." required>
