--- a/Pages/first.html
+++ b/Pages/first.html
@@ -13,16 +13,27 @@
             <ul>
                 <li class="parte_cima"><a href="/Pages/first.html" class="sites">Inicio</a></li>
                 <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
-                <li class="parte_cima"><a href="/Pages/job.html" class="sites">Trabalhe conosco</a></li>
+                <li class="parte_cima"><a href="/Pages/API.html" class="sites">Uso de APIrest</a></li>
             </ul>
         </header>
         <main>
             <section id="introducao">
                 <article>
                     <h2>Bem vindo ao meu repositório!!</h2>
-                    <img id="coffeshop" src="/Images/Coffeshop.png" alt="Imagem agradável de um local que vende café!"/>
+                    <img id="introimg" src="/Images/Inicio.jpg" alt="Imagem tecnologica"/>
                     <p >Aqui eu venho mostrar um pouco sobre minhas pequenas "softskills" e como costumo atribuir elas, estou em fase de aprendizado, mas aos poucos vamos seguindo. </p>
                 </article>
+                <div class="experiencias">
+                    <div id="linguagensCabecalho">
+                        <li class="textCabecalho">C++</li>
+                        <li class="textCabecalho">Python</li>
+                        <li class="textCabecalho">PostsreSQL</li>
+                        <li class="textCabecalho">JavaScript</li>
+                    </div>
+                    <div class="linguagemBody">
+
+                    </div>
+                </div>
             </section>
         </main>
         <footer id="rodape">
