Pequeno upgrade no style, amanhã JS.

--- a/Pages/first.html
+++ b/Pages/first.html
@@ -24,15 +24,14 @@
                     <p >Aqui eu venho mostrar um pouco sobre minhas pequenas "softskills" e como costumo atribuir elas, estou em fase de aprendizado, mas aos poucos vamos seguindo. </p>
                 </article>
                 <div class="experiencias">
-                    <div id="linguagensCabecalho">
+                    <ul id="linguagensCabecalho">
                         <li class="textCabecalho">C++</li>
                         <li class="textCabecalho">Python</li>
-                        <li class="textCabecalho">PostsreSQL</li>
+                        <li class="textCabecalho">PostgreSQL</li>
                         <li class="textCabecalho">JavaScript</li>
-                    </div>
-                    <div class="linguagemBody">
-
-                    </div>
+                    </ul>
+                    <div class="linguagemBody">teste</div>
+                </div>
                 </div>
             </section>
         </main>
