--- a/Pages/first.html
+++ b/Pages/first.html
@@ -25,12 +25,12 @@
                 </article>
                 <div class="experiencias">
                     <ul id="linguagensCabecalho">
-                        <li class="textCabecalho">C++</li>
-                        <li class="textCabecalho">Python</li>
-                        <li class="textCabecalho">PostgreSQL</li>
-                        <li class="textCabecalho">JavaScript</li>
+                        <li class="textCabecalho" data-linguagem="C++">C++</li>
+                        <li class="textCabecalho" data-linguagem="Python">Python</li>
+                        <li class="textCabecalho" data-linguagem="PostgreSQL">PostgreSQL</li>
+                        <li class="textCabecalho" data-linguagem="JavaScript">JavaScript</li>
                     </ul>
-                    <div class="linguagemBody">teste</div>
+                    <div class="linguagemBody">Clique em uma linguagem acima para ver mais informações.</div>
                 </div>
                 </div>
             </section>
