Melhorando algumas coisas básicas, logo mais irei melhorar a página principal.

--- a/Pages/API.html
+++ b/Pages/API.html
@@ -10,9 +10,11 @@
 <body>
     <div id="container">
         <header id="cabecalho">
-            <li class="parte_cima"><a href="/Pages/first.html" class="sites">Inicio</a></li>
-            <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
-            <li class="parte_cima"><a href="/Pages/API.html" class="sites">Uso de APIrest</a></li>
+            <ul>
+                <li class="parte_cima"><a href="/Pages/first.html" class="sites">Inicio</a></li>
+                <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
+                <li class="parte_cima"><a href="/Pages/API.html" class="sites">Uso de APIrest</a></li>
+            </ul>
         </header>
         <main>
             <section id="introducao">
@@ -50,6 +52,7 @@
             </address>
         </footer>
     </div>
+    <script src="/Backend/script.js"></script>
     <script src="/Backend/cep.js"></script>
 </body>
 </html>
