--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -72,5 +72,6 @@
         </footer>
     </div>
     <script src="/Backend/crud.js"></script>
+    <script src="/Backend/script.js"></script>
 </body>
 </html>
