--- a/Pages/first.html
+++ b/Pages/first.html
@@ -32,6 +32,20 @@
                     </ul>
                     <div class="linguagemBody">Clique em uma linguagem acima para ver mais informações.</div>
                 </div>
+                <article id="oldwork">
+                    <div class="top-edge">
+                        <h3>Experiencias:</h3> <!--Aqui por enquanto vou deixar assim, depois tenho que tirar a animação do H2-->
+                    </div>
+                    <div class="left-edge">
+                        <p>teste</p>
+                    </div>
+                    <div class="left-edge">
+                        <p>teste</p>
+                    </div>
+                    <div class="oldwork-content">
+                        <p>teste</p>
+                    </div>
+                </article>
             </section>
         </main>
         <footer id="rodape">
