--- a/Pages/first.html
+++ b/Pages/first.html
@@ -36,14 +36,13 @@
                     <div class="top-edge">
                         <h3>Experiencias:</h3> <!--Aqui por enquanto vou deixar assim, depois tenho que tirar a animação do H2-->
                     </div>
-                    <div class="left-edge">
-                        <p>teste</p>
-                    </div>
-                    <div class="left-edge">
-                        <p>teste</p>
+                    <div class="left-edge" id="evo">
+                        <ul>
+                            <li class="funcao">EVO Automações</li>
+                            <li class="funcao">Exército Brasileiro</li>
+                        </ul>
                     </div>
                     <div class="oldwork-content">
-                        <p>teste</p>
                     </div>
                 </article>
             </section>
