Tenho que fazer um sistema novo para ser exemplo de dashboard...

--- a/Pages/first.html
+++ b/Pages/first.html
@@ -21,7 +21,7 @@
                 <article>
                     <h2>Bem vindo ao meu repositório!!</h2>
                     <img id="introimg" src="/Images/Inicio.jpg" alt="Imagem tecnologica"/>
-                    <p >Aqui eu venho mostrar um pouco sobre minhas pequenas "softskills" e como costumo atribuir elas, estou em fase de aprendizado, mas aos poucos vamos seguindo. </p>
+                    <p>Aqui eu venho mostrar um pouco sobre minhas pequenas "softskills" e como costumo atribuir elas, estou em fase de aprendizado, mas aos poucos vamos seguindo. </p>
                 </article>
                 <div class="experiencias">
                     <ul id="linguagensCabecalho">
@@ -38,11 +38,12 @@
                     </div>
                     <div class="left-edge" id="evo">
                         <ul>
-                            <li class="funcao">EVO Automações</li>
                             <li class="funcao">Exército Brasileiro</li>
+                            <li class="funcao">EVO Automações</li>
                         </ul>
                     </div>
                     <div class="oldwork-content">
+                        <p class="contentStart">Para descobrir um pouco mais sobre mim, sugiro que clique em um dos botões a esquerda!!</p>
                     </div>
                 </article>
             </section>
