--- a/Pages/login.html
+++ b/Pages/login.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <p>Aqui será um sistema de login, onde farei algumas mudanças nas outras páginas.</p>
+  <div class="container">
+    <form class="login-form" id="loginForm">
+      <h2>Login</h2>
+      <div class="input-box">
+        <input type="email" id="email" required />
+        <label for="email">E-mail</label>
+      </div>
+      <div class="input-box">
+        <input type="password" id="password" required />
+        <label for="password">Senha</label>
+      </div>
+      <button type="submit">Entrar</button>
+      <p class="error-message" id="errorMessage"></p>
+    </form>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
