--- a/Pages/login.html
+++ b/Pages/login.html
@@ -4,23 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
-  <div class="container">
-    <form class="login-form" id="loginForm">
-      <h2>Login</h2>
-      <div class="input-box">
-        <input type="email" id="email" required />
-        <label for="email">E-mail</label>
-      </div>
-      <div class="input-box">
-        <input type="password" id="password" required />
-        <label for="password">Senha</label>
-      </div>
-      <button type="submit">Entrar</button>
-      <p class="error-message" id="errorMessage"></p>
-    </form>
+  <div id="contLogin">
+    <div id="inicioLogin">
+      <form class="login-form" id="loginForm">
+        <h2>Login</h2>
+        <div class="input-box">
+          <input type="email" id="email" required />
+          <label for="email">E-mail</label>
+        </div>
+        <div class="input-box">
+          <input type="password" id="password" required />
+          <label for="password">Senha</label>
+        </div>
+        <button type="submit">Entrar</button>
+        <p class="error-message" id="errorMessage"></p>
+      </form>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
