Melhorando um pouco a barra de cima, criado a div para o login.

--- a/Pages/first.html
+++ b/Pages/first.html
@@ -10,11 +10,17 @@
 <body>
     <div id="container">
         <header id="cabecalho">
-            <ul>
+            <ul id="menu">
                 <li class="parte_cima"><a href="/Pages/first.html" class="sites">Inicio</a></li>
                 <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
                 <li class="parte_cima"><a href="/Pages/API.html" class="sites">Uso de APIrest</a></li>
             </ul>
+            <a href="/Pages/login.html">
+                <div id="usuario" class="loginIcon">
+                    <p>Login</p>
+                    <img src="/Images/usuicon.png" alt="Ícone de usuário" width="44">
+                </div>
+            </a>
         </header>
         <main>
             <section id="introducao">
