--- a/Pages/menu.html
+++ b/Pages/menu.html
@@ -15,6 +15,12 @@
                 <li class="parte_cima"><a href="/Pages/menu.html" class="sites">Menu</a></li>
                 <li class="parte_cima"><a href="/Pages/API.html" class="sites">Uso de APIrest</a></li>
             </ul>
+            <a href="/Pages/login.html">
+                <div id="usuario" class="loginIcon">
+                    <p>Login</p>
+                    <img src="/Images/usuicon.png" alt="Ícone de usuário" width="44">
+                </div>
+            </a>
         </header>
         <main>
             <section id="introducao">
