Iniciando um DashBoard.

--- a/Pages/login.html
+++ b/Pages/login.html
@@ -24,6 +24,7 @@
       </form>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="/Backend/script.js"></script>
+  <script src="/Backend/login.js"></script>
 </body>
 </html>
